# arrgf

./: CMakeLists.txt  Readme.md  arrgf.cu  common_math_kernel.h  convolution_kernel.h  get_cuda_info.cu  hdrloader.h  hello.cu  l2loc2_kernel.h  local_measure.h  matrix.h  patch.h  patch.hpp  png_tool.cpp  png_tool.h  png_tool.hpp  rgbnorm2_kernel.h  test.sh  trilateral_kernel.h  util.h  vec_util.h
