CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(ARRGF)

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(PNG REQUIRED)

SET(CMAKE_CXX_STANDARD 11)

CUDA_ADD_EXECUTABLE(hello.out hello.cu)
CUDA_ADD_EXECUTABLE(get-cuda-info.out get_cuda_info.cu)

CUDA_ADD_EXECUTABLE(arrgf.out arrgf.cu)
TARGET_LINK_LIBRARIES(arrgf.out ${PNG_LIBRARY})